--- a/src/app/portafolio/pages/layout-page/layout-page.component.css
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.css
@@ -1,12 +1,6 @@
 .layout-toolbar-spacer {
   flex: 1 1 auto;
 }
-
-.github-button{
-  line-height: normal;
-}
-
-.github-icon{
-  margin-right: 0;
-  margin-left: 0;
+.toolbar-span {
+  padding-left: 9em;
 }
